<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ANR Turn Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="runner_radio_button_text">Runner</string>
    <string name="you_are_text">Choose your side:</string>
    <string name="corp_radio_button_text">Corporation</string>
    <string name="start_button_text">Start</string>
    <string name="title_activity_game">Game</string>
    <string name="gain_click_permanently_button_text">Gain a click permanently</string>
    <string name="lose_click_permanently_button_text">Lose a click permanently</string>
    <string name="gain_click_button_text">Gain a click</string>
    <string name="lose_click_button_text">Use a click</string>
    <string name="your_clicks">Your clicks:</string>
    <string name="clicks_left">3</string>
    <string name="start_new_turn_button_text">Start new turn</string>
    <string name="continue_button_text">Continue game</string>
    <string name="dialog_message">Are you sure?</string>
    <string name="dialog_title">Start new turn</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="click_description">Click</string>
    <string name="minus_text">-</string>
    <string name="plus_text">+</string>
    <string name="brain_damage_symbol_description">Brain damage symbol</string>
    <string name="brain_damage_text">0</string>
    <string name="credit_symbol_description">Credit symbol</string>
    <string name="credits_text">5</string>
    <string name="bad_publicity_symbol_description">Bad publicity symbol</string>
    <string name="tags_or_bad_publicity_text">0</string>
    <string name="tag_symbol_description">Tag symbol</string>
    <string name="divider_text">/</string>
    <string name="runner_click_tracker_description">Runner click tracker</string>
    <string name="corp_click_tracker_description">Corp click tracker</string>
    <string name="click_tracker_token_symbol_description">Click tracker token symbol</string>
    <string name="dialog_cant_gain">Stop that!</string>
    <string name="dialog_cant_lose">Stop that!</string>
    <string name="start_new_game">New game</string>
    <string name="accept">Accept</string>
	<string name="eula">COPYRIGHTS:
 
\nCopyright © Jani Makkonen 2014 All Rights Reserved.
 
\n\nThis software may not, in whole or in any part, be copied, reproduced, transmitted, translated (into any
language, natural or computer), stored in a retrieval system, reduced to any electronic medium or machine readable
format, or by any other form or means without prior consent, in writing, from Jani Makkonen.
 
\n\nYou are granted a limited license to use this software. The software may be used or copied only in accordance
with the terms of that license, which is described in the following paragraphs.
  
\n\nLICENSE:
\n\n\"THE SOFTWARE\" shall be taken to mean the software contained in this app and any subsequent versions
or upgrades received as a result of having downloaded this app. \"USER\" shall be taken as the original
installer of the software.
 
\n\nUser has the non-exclusive right to the use of software only on a single device. User may not electronically
transfer the program from one device to another over any type of network. User may not distribute copies
of the software or the accompanying documentation to others either for a fee or without charge. User may not modify
or translate the program or documentation. User may not disassemble the program or allow it to be disassembled
into its constituent source code. User\'s use of the software indicates his/her acceptance of these terms
and conditions. If user does not agree to these conditions, return the distribution media, documentation, and
associated materials to the vendor from whom the software was purchased, and/or uninstall the software from the device,
and erase the software from any and all storage devices upon which it may have been installed.
 
\n\nThis license agreement shall be governed by the laws of Finland and
shall inure to the benefit of Jani Makkonen or his assigns.
 
\n\nDISCLAIMER / LIMITATION OF LIABILITY:
\n\nUser acknowledges that the software may not be free from defects and may not satisfy all of User\'s
needs. The software and any accompanying written materials are licensed \"AS IS\". User\'s exclusive
remedy during the warranty period (if any) shall consist of replacement of distribution media if determined to be
faulty. In no event will Jani Makkonen be liable for direct, indirect, incidental or consequential damage or
damages resulting from loss of use, or loss of anticipated profits resulting from any defect in the software,
even if it has been advised of the possibility of such damage. Some laws do not allow exclusion or limitation
of implied warranties or liabilities for incidental or consequential damages, so the above limitations or
exclusion may not apply.
 
\n\nSPECIFIC RESTRICTIONS:
\n\nThis software may not be rented or leased.
\n\nThe software and accompanying documentation may not be provided by a \"Backup Service\" or any other vendor
which does not provide an original package as composed of ANR Turn Tracker, including but not limited to all original
distribution media, documentation, registration cards, and insertions.</string>
    
</resources>
