<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/creditsToOpponent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:keepScreenOn="true"
            android:rotation="180"
            android:text="@string/credits_text"
            android:textSize="35sp" />

        <ImageView
            android:layout_width="70dp"
            android:layout_height="49dp"
            android:contentDescription="@string/credit_symbol_description"
            android:gravity="center"
            android:rotation="180"
            android:scaleType="fitCenter"
            android:src="@drawable/credit_symbol" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/tracker_background"
            android:layout_width="234dp"
            android:layout_height="153.33dp"
            android:background="@drawable/corp_click_tracker"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/click_tracker"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/click_tracker_token_symbol_description"
                android:scaleType="fitCenter"
                android:src="@drawable/click_tracker_token_symbol"
                android:translationX="0px"
                android:translationY="0px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_gain_click"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="?android:selectableItemBackground"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/click_description"
                android:onClick="buttonPushed"
                android:scaleType="fitCenter"
                android:src="@drawable/click_plus_symbol" />

            <ImageButton
                android:id="@+id/button_start_new_turn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="?android:selectableItemBackground"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/click_description"
                android:onClick="buttonPushed"
                android:scaleType="fitCenter"
                android:src="@drawable/new_turn_button_image" />

            <ImageButton
                android:id="@+id/button_lose_click"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="?android:selectableItemBackground"
                android:baselineAlignBottom="true"
                android:contentDescription="@string/click_description"
                android:onClick="buttonPushed"
                android:scaleType="fitCenter"
                android:src="@drawable/click_minus_symbol" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center_vertical"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="70dp"
                            android:layout_height="49dp"
                            android:contentDescription="@string/credit_symbol_description"
                            android:gravity="center"
                            android:scaleType="fitCenter"
                            android:src="@drawable/credit_symbol" />

                        <TextView
                            android:id="@+id/credits"
                            android:layout_width="0dp"
                            android:layout_height="fill_parent"
                            android:layout_gravity="right"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:keepScreenOn="true"
                            android:text="@string/credits_text"
                            android:textSize="35sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:orientation="horizontal" >

                        <ImageView
                            android:layout_width="70.5dp"
                            android:layout_height="46dp"
                            android:contentDescription="@string/brain_damage_symbol_description"
                            android:gravity="left"
                            android:scaleType="fitCenter"
                            android:src="@drawable/brain_damage_symbol" />

                        <TextView
                            android:id="@+id/brain_damage"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center"
                            android:keepScreenOn="true"
                            android:text="@string/brain_damage_text"
                            android:textSize="35sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <ImageView
                            android:id="@+id/tag_or_bad_pub_image"
                            android:layout_width="70.5dp"
                            android:layout_height="46dp"
                            android:contentDescription="@string/tag_symbol_description"
                            android:gravity="center"
                            android:scaleType="fitCenter"
                            android:src="@drawable/tag_symbol" />

                        <TextView
                            android:id="@+id/tags_or_bad_publicity"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:gravity="center"
                            android:keepScreenOn="true"
                            android:text="@string/tags_or_bad_publicity_text"
                            android:textSize="35sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/button_lose_credit"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:onClick="buttonPushed"
                            android:text="@string/minus_text"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button_gain_credit"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:onClick="buttonPushed"
                            android:text="@string/plus_text"
                            android:textSize="12sp" >
                        </Button>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/button_lose_brain_damage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:onClick="buttonPushed"
                            android:text="@string/minus_text"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button_gain_brain_damage"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:onClick="buttonPushed"
                            android:text="@string/plus_text"
                            android:textSize="12sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:orientation="horizontal" >

                        <Button
                            android:id="@+id/button_lose_tag_or_bad_publicity"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:onClick="buttonPushed"
                            android:text="@string/minus_text"
                            android:textSize="12sp" />

                        <Button
                            android:id="@+id/button_gain_tag_or_bad_publicity"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:onClick="buttonPushed"
                            android:text="@string/plus_text"
                            android:textSize="12sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>